<?xml version="1.0" encoding="utf-8"?>
    <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <!-- Title for the application. [CHAR LIMIT=12] -->
        <string name="app_name">Coffee Shop</string>
        <string name="espresso">Espresso</string>
        <string name="macchiato">Macchiato</string>
        <string name="icedCoffe">Iced coffee</string>
        <string name="cappuccino">Cappuccino</string>
        <string name="nescafe">Nescafe</string>
        <string name="traditional_coffee">Traditional coffee</string>

        <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
        <string name="name">Name</string>
        <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
        <string name="toppings">Toppings</string>
        <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
        <string name="whipped_cream">Whipped cream</string>
        <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
        <string name="chocolate">Chocolate</string>
        <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
        <string name="quantity">quantity</string>

        <string name="increment">You cannot have more than 100 coffees</string>
        <string name="decrement"> Enter proper quantity </string>
        <!--
           Subject line for the order summary email. It will be in the format of
           "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
         -->
        <string name="order_summary_email_subject">Coffee Shop order for  <xliff:g id="name" example="Vesna">%s</xliff:g></string>

        <!--
          Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
          user's name. [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_name">Name: <xliff:g id="name" example="Vesna">%s</xliff:g></string>
        <!--
        Whipped cream topping for the order summary. It will be shown in the format of
        "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

        <!--
          Chocolate topping for the order summary. It will be shown in the format of
          "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

        <!--
          Quantity of coffee cups for the order summary. It will be shown in the format of
          "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_water">Quantity:  <xliff:g id="quantityWater" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_delight">Quantity: <xliff:g id="quantityDelight" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_lemonpie">Quantity:  <xliff:g id="quantityLemonpie" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_pancakes">Quantity:  <xliff:g id="quantityPancakes" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_macarons">Quantity:  <xliff:g id="quantityMacarons" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_cakepops">Quantity:  <xliff:g id="quantityCakepops" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_cookies">Quantity:  <xliff:g id="quantityCookies" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_donuts">Quantity:  <xliff:g id="quantityDonuts" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_muffins">Quantity:  <xliff:g id="quantityMuffins" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_moonpie">Quantity:  <xliff:g id="quantityMoonpie" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_cheesecake">Quantity:  <xliff:g id="quantityCheesecake" example="2">%d</xliff:g></string>
        <string name="order_summary_quantity_pumpkinpie">Quantity:  <xliff:g id="quantityPumpkinpie" example="2">%d</xliff:g></string>
            <!--
          Total price for the order summary. It will be shown in the format of
          "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_price">Total:  <xliff:g id="price" example="$10">%s</xliff:g></string>

        <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
        <string name="thanks">Thank you!</string>
        <string name="оrder">оrder</string>
    <string name="dialog_about_app">About</string>
    <string name="dialog_about_yes">Cancel</string>
    <string name="message">Vesna Tanaskovic made this app</string>
    <string name="about">About</string>
    <string name="extras">Extras</string>
    <string name="total">Total</string>
    <string name="mineralwater">Mineral water</string>
    <string name="delight">Delight </string>
    <string name="order_summary_mineral_water">With mineral water? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_delight">With delights? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="cookies">Cookies</string>
    <string name="macarons">Macarons</string>
    <string name="donuts">Donuts</string>
    <string name="order_summary_donuts">With donuts? <xliff:g id="withDonuts" example="true">%b</xliff:g></string>
    <string name="order_summary_cookies">With cookies? <xliff:g id="withCookies" example="true">%b</xliff:g></string>
    <string name="muffins">Muffins</string>
    <string name="pancakes">Pancakes</string>
    <string name="order_summary_muffins">With muffins? <xliff:g id="withMuffins" example="true">%b</xliff:g></string>
    <string name="moonpie">Moonpie</string>
    <string name="order_summary_moonpie">With moonpie? <xliff:g id="withMoonpie" example="true">%b</xliff:g></string>
    <string name="cheesecake">Cheesecake</string>
    <string name="pumpkinpie">Pumpkinpie</string>
    <string name="order_summary_cheesecake">With cheesecake? <xliff:g id="withCheesecake" example="true">%b</xliff:g></string>
    <string name="order_summary_pumpkinpie">With pumpkinpie? <xliff:g id="withPumpkinpie" example="true">%b</xliff:g></string>
    <string name="applepie">Applepie</string>
    <string name="lemonpie">Lemonpie</string>
    <string name="fruitpie">Fruitpie</string>
    <string name="cakepops">Cake Pops</string>
    <string name="order_summary_lemonpie">With Lemonpie? <xliff:g id="withLemonpie" example="true">%b</xliff:g></string>
    <string name="order_summary_pancakes">With Pancakes? <xliff:g id="withPancakes" example="true">%b</xliff:g></string>
    <string name="order_summary_macarons">With Macarons? <xliff:g id="withMacarons" example="true">%b</xliff:g></string>
    <string name="order_summary_cakepops">With Cake Pops? <xliff:g id="withCakepops" example="true">%b</xliff:g></string>
    <string name="input">Enter quantity!</string>
    <string name="checkInputWater">You did not enter quantity of Mineral water</string>
    <string name="checkInputDelight">You did not enter quantity of Delight</string>
    <string name="checkInputLemonpie">You did not enter quantity of Lemonpie</string>
    <string name="checkInputPancakes">You did not enter quantity of pancakes</string>
    <string name="checkInputMacarons">You did not enter quantity of Macarons</string>
    <string name="checkInputCakepops">You did not enter quantity of Cake Pops</string>
    <string name="checkInputCookies">You did not enter quantity of Cookies</string>
    <string name="checkInputDonuts">You did not enter quantity of Donuts</string>
    <string name="checkInputMuffins">You did not enter quantity of Muffins</string>
    <string name="checkInputMoonpie">You did not enter quantity of Moonpie</string>
    <string name="checkInputCheesecake">You did not enter quantity of Cheesecake</string>
    <string name="checkInputPumpkinpie">You did not enter quantity of Pumpkinpie</string>



</resources>
