<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gridview.activities.MacchiatoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tintColor"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/tintColor" />


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/extras" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/muffins_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/tintColor"
                    android:paddingLeft="8dp"
                    android:text="@string/muffins"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/muffins" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/moonpie_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/tintColor"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:text="@string/moonpie"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/moonpie" />

            </LinearLayout>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/macchiato" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#ccb5ad">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:background="#ccb5ad"
                android:src="@drawable/minuscircle" />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_gravity="center"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ccb5ad"
                android:onClick="increment"
                android:src="@drawable/pluscircle" />


        </LinearLayout>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/tintColor"
            android:paddingLeft="8dp"
            android:text="@string/whipped_cream"
            android:textColor="@color/colorDark"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/tintColor"
            android:paddingLeft="8dp"
            android:text="@string/chocolate"
            android:textColor="@color/colorDark"
            android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorDark"
                android:onClick="showTotal"
                android:text="@string/total"
                android:textColor="@color/tintColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/tintColor"
                android:onClick="submitOrder"
                android:text="@string/оrder"
                android:textColor="@color/colorDark"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>