<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gridview.activities.CappuccinoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tintColor"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/tintColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cappuccino"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cappucino_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toppings"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/toppings_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <TextView
                style="@style/HeaderTextStyle1"
                android:layout_weight="1"
                android:text="@string/quantity" />

            <TextView
                style="@style/HeaderTextStyle1"
                android:layout_weight="1"
                android:text="@string/toppings" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#F5F5F5"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#F5F5F5"
                    android:onClick="decrement"
                    android:scaleType="centerCrop"
                    android:src="@drawable/minuscircle" />


                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#F5F5F5"
                    android:onClick="increment"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pluscircle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/whipped_cream_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/tintColor"
                        android:paddingLeft="6dp"
                        android:text="@string/whipped_cream"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chocolate_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/tintColor"
                        android:paddingLeft="6dp"
                        android:text="@string/chocolate"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/extras" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/macarons_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/tintColor"
                        android:paddingLeft="6dp"
                        android:text="@string/macarons"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/macarons_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/macarons_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tintColor"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:textColor="@color/colorDark"
                    android:textColorHint="@color/tintColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/macaron" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cake_pops_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/tintColor"
                        android:paddingLeft="6dp"
                        android:text="@string/cakepops"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/cakepops_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/cakepops_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tintColor"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:textColor="@color/colorDark"
                    android:textColorHint="@color/tintColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/cakepops" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorDark"
                android:onClick="showTotal"
                android:text="@string/total"
                android:textColor="@color/tintColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/tintColor"
                android:onClick="submitOrder"
                android:text="@string/оrder"
                android:textColor="@color/colorDark"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>